<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_GetTransportTube" Id="{1c225a2d-c668-4975-8e19-7e053353ec27}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_GetTransportTube : REFERENCE TO FB_TransportTube
VAR_INPUT
	eTT : T_TransportTube;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE eTT OF
E_TransportTube.LS1:
	F_GetTransportTube REF= GVL_TransportTubes.fbLS1;
E_TransportTube.LS5:
	F_GetTransportTube REF= GVL_TransportTubes.fbLS5;
E_TransportTube.LS8:
	F_GetTransportTube REF= GVL_TransportTubes.fbLS8;

E_TransportTube.LD2:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD2;
E_TransportTube.LD4:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD4;
E_TransportTube.LD6:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD6;
E_TransportTube.LD14:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD14;
E_TransportTube.LD10:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD10;
E_TransportTube.LD9:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD9;
E_TransportTube.LD8:
	F_GetTransportTube REF= GVL_TransportTubes.fbLD8;
ELSE // Invalid transport tube
	F_GetTransportTube REF= 0;
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="F_GetTransportTube">
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>